# quentier

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  404.html  CMakeLists.txt  CONTRIBUTING.md  CodingStyle.md  Evernote_API_migration_notes.txt  INSTALL.md  MainWindow.cpp  MainWindow.h  MainWindow.ui  NoteRichTextEditor.cpp  NoteRichTextEditor.h  NoteRichTextEditor.ui  QuteNote.pro  README.md  TODO.txt  TextEditWithCheckboxes.cpp  TextEditWithCheckboxes.h  ToDoCheckboxTextObject.cpp  ToDoCheckboxTextObject.h  appveyor.yml  index.html  index.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sitemap.xml
QuteNote/: CMakeLists.txt  TODO.txt  main.cpp
QuteNote/resource/: enc_data.qrc  icons.qrc
QuteNote/tests/: Test_EvernoteOAuthBrowser.cpp
SimpleCrypt/: CMakeLists.txt
SimpleCrypt/src/: Simplecrypt.cpp  simplecrypt.cpp  simplecrypt.h
core/: CMakeLists.txt
crash_handler/: CMakeLists.txt
crash_handler/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  PackagingInfo.h.in  SymbolsUnpacker.cpp  SymbolsUnpacker.h  Utility.cpp  Utility.h  main.cpp
gui/: CMakeLists.txt
gui/client/: CredentialsModel.h  EvernoteServiceManager.cpp  EvernoteServiceManager.h  EvernoteServiceOAuthHandler.cpp  EvernoteServiceOAuthHandler.h
gui/resource/: icons.qrc
gui/src/: AskConsumerKeyAndSecret.cpp  AskConsumerKeyAndSecret.h  AskConsumerKeyAndSecret.ui  AskUserNameAndPassword.cpp  AskUserNameAndPassword.h  AskUserNameAndPassword.ui  EvernoteOAuthBrowser.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TableSettingsDialog.cpp  TableSettingsDialog.h  TableSettingsDialog.ui  main.cpp
kqoauth/: CMakeLists.txt
kqoauth/src/: kqoauthmanager.cpp  kqoauthmanager_p.h  kqoauthrequest_p.h
lib/: CMakeLists.txt
lib/account/: AccountDelegate.cpp  AccountDelegate.h  AccountFilterModel.cpp  AccountFilterModel.h  AccountManager.cpp  AccountManager.h  AccountModel.cpp  AccountModel.h  AddAccountDialog.cpp  AddAccountDialog.h  CMakeLists.txt  DeleteAccountDialog.cpp  DeleteAccountDialog.h  ManageAccountsDialog.cpp  ManageAccountsDialog.h
lib/delegate/: AbstractStyledItemDelegate.cpp  AbstractStyledItemDelegate.h  CMakeLists.txt  DeletedNoteItemDelegate.cpp  DeletedNoteItemDelegate.h  DirtyColumnDelegate.cpp  DirtyColumnDelegate.h  FavoriteItemDelegate.cpp  FavoriteItemDelegate.h  FromLinkedNotebookColumnDelegate.cpp  FromLinkedNotebookColumnDelegate.h  LimitedFontsDelegate.cpp  LimitedFontsDelegate.h  LogViewerDelegate.cpp  LogViewerDelegate.h  NoteItemDelegate.cpp  NoteItemDelegate.h  NotebookItemDelegate.cpp  NotebookItemDelegate.h  SynchronizableColumnDelegate.cpp  SynchronizableColumnDelegate.h  TagItemDelegate.cpp  TagItemDelegate.h
lib/dialog/: AddOrEditNotebookDialog.cpp  AddOrEditNotebookDialog.h  AddOrEditSavedSearchDialog.cpp  AddOrEditSavedSearchDialog.h  AddOrEditTagDialog.cpp  AddOrEditTagDialog.h  CMakeLists.txt  EditNoteDialog.cpp  EditNoteDialog.h  EditNoteDialog.ui  EditNoteDialogsManager.cpp  EditNoteDialogsManager.h  FirstShutdownDialog.cpp  FirstShutdownDialog.h  LocalStorageUpgradeDialog.cpp  LocalStorageUpgradeDialog.h  LocalStorageUpgradeDialog.ui  LocalStorageVersionTooHighDialog.cpp  LocalStorageVersionTooHighDialog.h  WelcomeToQuentierDialog.cpp  WelcomeToQuentierDialog.h  WelcomeToQuentierDialog.ui
lib/enex/: CMakeLists.txt  EnexExportDialog.cpp  EnexExportDialog.h  EnexExporter.cpp  EnexExporter.h  EnexImportDialog.cpp  EnexImportDialog.h  EnexImporter.cpp  EnexImporter.h
lib/exception/: CMakeLists.txt  LocalStorageVersionTooHighException.cpp  LocalStorageVersionTooHighException.h  Utils.cpp  Utils.h
lib/initialization/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  DefaultAccountFirstNotebookAndNoteCreator.cpp  DefaultAccountFirstNotebookAndNoteCreator.h  Initialize.cpp  Initialize.h  LoadDependencies.cpp  LoadDependencies.h  ParseStartupAccount.cpp  ParseStartupAccount.h  SetupApplicationIcon.cpp  SetupApplicationIcon.h  SetupStartAtLogin.cpp  SetupStartAtLogin.h  SetupTranslations.cpp  SetupTranslations.h
lib/model/: CMakeLists.txt  ColumnChangeRerouter.cpp  ColumnChangeRerouter.h  FavoritesModel.cpp  FavoritesModel.h  FavoritesModelItem.cpp  FavoritesModelItem.h  IModelItem.h  ItemModel.cpp  ItemModel.h  LogViewerModel.cpp  LogViewerModel.h  LogViewerModelFileReaderAsync.cpp  LogViewerModelFileReaderAsync.h  LogViewerModelLogFileParser.cpp  LogViewerModelLogFileParser.h  NewItemNameGenerator.hpp  NoteCache.h  NoteModel.cpp  NoteModel.h  NoteModelItem.cpp  NoteModelItem.h  NotebookCache.h  NotebookItem.cpp  NotebookItem.h  NotebookLinkedNotebookRootItem.cpp  NotebookLinkedNotebookRootItem.h  NotebookModel.cpp  NotebookModel.h  NotebookModelItem.cpp  NotebookModelItem.h  NotebookStackItem.cpp  NotebookStackItem.h  SavedSearchCache.h  SavedSearchModel.cpp  SavedSearchModel.h  SavedSearchModelItem.cpp  SavedSearchModelItem.h  TagCache.h  TagItem.cpp  (+6 more)
lib/network/: CMakeLists.txt  NetworkProxySettingsHelpers.cpp  NetworkProxySettingsHelpers.h  NetworkReplyFetcher.cpp  NetworkReplyFetcher.h
lib/preferences/: CMakeLists.txt  DefaultDisableNativeMenuBar.cpp  DefaultDisableNativeMenuBar.h  DefaultSettings.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  SettingsNames.h  UpdateSettings.cpp  UpdateSettings.h
lib/synchronization/: CMakeLists.txt  Fwd.h  SyncEventsTracker.cpp  SyncEventsTracker.h  SyncResultsStorage.cpp  SyncResultsStorage.h
lib/tray/: CMakeLists.txt  SystemTrayIconManager.cpp  SystemTrayIconManager.h
lib/update/: AppImageUpdateChecker.cpp  AppImageUpdateChecker.h  AppImageUpdateProvider.cpp  AppImageUpdateProvider.h  CMakeLists.txt  Fwd.h  GitHubUpdateChecker.cpp  GitHubUpdateChecker.h  IUpdateChecker.cpp  IUpdateChecker.h  IUpdateProvider.cpp  IUpdateProvider.h  UpdateInfo.h.in  UpdateManager.cpp  UpdateManager.h
lib/utility/: ActionsInfo.cpp  ActionsInfo.h  AsyncFileWriter.cpp  ExitCodes.h  (+32 more)
libquentier/: CMakeLists.txt  Doxyfile
libqutenote/: CMakeLists.txt  Doxyfile  README.md
quentier/: CMakeLists.txt
qutenote/: CMakeLists.txt
symbols_compressor/: CMakeLists.txt
thrift/: CMakeLists.txt
(+2521 files in other folders)
